# companion-app

./: .env  .env.local  .eslintrc.js  .gitignore  App.tsx  README.md  app.json  babel.config.js  index.js  jest.config.js  metro.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.txt  react-native.config.js  tsconfig.json
.cursor/loops/: 2026-04-03-boot-perceptibility-cycle3-closure.md  2026-04-03-native-durability-startup-handoff.md  2026-04-03-staged-boot-surface-cycle2-closure.md  (+1 more)
.cursor/plans/: ui-refactor-plan.md  (+22 more)
.rnstorybook/: storybook.requires.ts
__tests__/: App.test.tsx  failureClassification.frontDoor.test.ts  frontDoorGate.test.ts  getContextRN.test.ts  layerRuntimeInputs.test.ts  log.test.ts  ragBloodMoon.test.ts  ragValidate.test.ts  requestDebugStore.test.ts  resultsOverlayReferences.test.tsx  runRagFlow.frontDoor.test.ts  sceneUpdates.test.ts  semanticFrontDoor.getContextParity.integration.test.ts  theme.test.ts  touchHandlers.test.ts  vizState.test.ts
android/: gradle.properties  settings.gradle
docs/: ACT_DESCRIPTOR_SPEC.md  AGENT_RULES.md  ANDROID_INVARIANT_CAUSE.md  APP_ARCHITECTURE.md  ARCHITECTURE.md  BISECT_FINDINGS.md  CONTENT_PACK_SETUP.md  FORMATIONS_SPINE.md  INTERACTION_CONTRACT.md  NAME_SHAPING.md  NATIVE_MIC_CONTRACT.md  NATIVE_PLUGIN_PATTERN.md  NODEMAP_COMPONENT_REFERENCE.md  PLAY_ACT_BOUNDARIES.md  PLAY_ACT_CONTRACT.md  PLAY_ACT_MEASUREMENT.md  PLAY_ACT_REALIZATION.md  PLUGIN_CONTRACT.md  RAG_MODELS.md  README.md  REBUILD_AND_BISECT_LOGS.md  SPINE_CONTROL_SETTINGS.md  VALIDATION_CHECKLIST_POST_DIAGNOSTIC.md  VISUALIZATION_COMPONENT_REFERENCE.md  VIZ_COMPONENT_REFERENCE.md  app-architecture.md  content-pack-setup.md  plugin-contract.md  semanticChannelCopyParity.matrix.md
ios/: DUPLICATE_CLASS_FIX.md  Podfile
notes/: espeak-ng-data-debug-ledger.md
plugins/piper-tts/android/src/main/jni/: CMakeLists.txt  piper_jni.cpp
scripts/: app-identity.js  apply-native-overrides.js  check-bundle-no-node.js  check-pack-no-models.js  clean-build.js  download-espeak-ng-data.sh  download-piper  download-piper-voice.sh  download-rag-models.sh  generate-app-icon.js  link-mtg-rules.js  nuclear-rebuild.js  patch-react-native-quick-sqlite.js  patch-react-native-voice-android.js  patch-react-native-voice.js  ping-piper.js  rebuild.sh  regen-native.js  reset-deps.js  sync-bootsplash-to-overrides.js  sync-pack-full.js  sync-pack-small.js  sync-piper-tts-codegen.js  update-runtime.js  validate-e2e-gates.js  verify-parity-uses-node.js
(+524 files in other folders)
